# first_n_elements

./: README.md  main.py  pyproject.toml
src/: utils.py
tests/: test_utils.py
