[tool.poetry]
name = "first-n-elements"
version = "0.1.0"
description = ""
authors = ["Marina Krasnoruzhskaya <krasnoruzhskayamarina@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
